--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +62,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/animations/animated-logo.json
+     - assets/images/default_profile.png
+     - assets/images/Rectangle 13.png
+     - assets/images/Rectangle 14.png
+     - assets/icons/back_arrow.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
