--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -31,10 +31,12 @@ dependencies:
   lottie: ^3.0.0
   flutter:
     sdk: flutter
+  flutter_svg: ^2.0.9 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/animations/animated-logo.json
+     - assets/images/reg-bg-shapes.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -68,6 +71,16 @@ flutter:
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
+  fonts:
+    - family: IBMPlexSansArabic
+      fonts:
+       - asset: assets/fonts/IBMPlexSansArabic-Regular.ttf
+       - asset: assets/fonts/IBMPlexSansArabic-Medium.ttf
+         weight: 500
+       - asset: assets/fonts/IBMPlexSansArabic-SemiBold.ttf
+         weight: 600
+       - asset: assets/fonts/IBMPlexSansArabic-Bold.ttf
+         weight: 700
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
