--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -70,6 +70,8 @@ flutter:
      - assets/icons/back_arrow.png
      - assets/images/reg-bg-shapes.svg
      - assets/images/logo.png
+     - assets/images/logo-white.svg
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
