--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -31,7 +31,14 @@ dependencies:
   lottie: ^3.0.0
   flutter:
     sdk: flutter
-  flutter_svg: ^2.0.9 
+  flutter_svg: ^2.0.9
+  local_auth: ^2.1.6
+  local_auth_android: ^1.0.33
+  local_auth_ios: ^1.1.5
+  local_auth_windows: ^1.0.9 
+  shared_preferences: ^2.2.2
+  http: ^1.1.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
