--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,9 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.0",
     "nodemailer": "^7.0.6",
+    "socket.io": "^4.8.1",
     "twilio": "^5.10.2",
+    "uuid": "^13.0.0",
     "winston": "^3.18.3"
   },
   "devDependencies": {
