--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "libphonenumber-js": "^1.12.23",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.0",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "socket.io": "^4.8.1",
     "twilio": "^5.10.2",
