--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "backend",
+  "name": "waseed-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Waseed Secure Messaging Backend API",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
+  },
+  "keywords": ["messaging", "encryption", "secure-chat", "e2ee"],
+  "author": "Waseed Team",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
