--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "mongoose": "^8.19.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
+    "redis": "^5.8.3",
     "resend": "^6.2.1",
     "socket.io": "^4.8.1",
     "twilio": "^5.10.2",
