--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.1.0
   flutter_secure_storage: ^9.2.4
+  app_settings: ^6.1.1
 
 dev_dependencies:
   flutter_test:
