--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   image_picker: ^1.1.2
   file_picker: ^8.0.3
   open_filex: ^4.3.4
+  flutter_dotenv: ^5.1.0 
+
   #Local Database
   sqflite: ^2.3.0
   path: ^1.8.3
@@ -95,6 +97,7 @@ flutter:
      - assets/images/logo.png
      - assets/images/logo-white.svg
      - assets/icons/back_arrow_white.png
+     - .env   
 
 
   #   - images/a_dot_ham.jpeg
