--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -55,8 +55,15 @@ dependencies:
   socket_io_client: ^2.0.3
   uuid: ^4.5.0
   
-
-
+  # QR Code Scanner
+  image: ^4.0.17  
+  mobile_scanner: ^5.0.0
+  qr_code_dart_scan: ^0.7.1
+  url_launcher: ^6.2.1
+  flutter_zxing: ^1.5.2
+  qr_code_tools: ^0.2.0
+  
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
