--- a/mobile/ios/Runner/Info.plist
+++ b/mobile/ios/Runner/Info.plist
@@ -55,7 +55,9 @@
 <string>يحتاج التطبيق لحفظ الصور في ألبوم الصور.</string>
 
 <key>NSLocationWhenInUseUsageDescription</key>
-<string>نحتاج الموقع لفحص أمان شبكة WiFi</string>
+<string>This app needs access to your location to provide relevant services while you are using the app.</string>
+<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+<string>This app needs access to your location to provide relevant services even when the app is in the background.</string>
 
 <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 <string>نحتاج الموقع لفحص أمان شبكة WiFi</string>
