--- a/mobile/ios/Runner/Info.plist
+++ b/mobile/ios/Runner/Info.plist
@@ -66,7 +66,9 @@
 <string>نحتاج الوصول للشبكة المحلية لتحليل الأمان</string>
 
 <key>NSPhotoLibraryAddUsageDescription</key>
-<string>We save a warning image when a screenshot is attempted.</string>
+<string>نحتاج إذنك لحفظ الصور</string>
+<key>NSPhotoLibraryUsageDescription</key>
+<string>نحتاج إذنك للوصول إلى المعرض</string>
 
 </dict>
 </plist>
