--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   screen_capture_event: ^1.2.0
   #image_gallery_saver: ^2.0.3
   path_provider: ^2.1.5 
-  gal: ^2.3.0
+  #gal: ^2.3.0
 
 
 
