--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -66,11 +66,12 @@ dependencies:
   
   # QR Code Scanner
   image: ^4.0.17  
-  mobile_scanner: ^5.0.0
+  mobile_scanner: ^7.1.3
   qr_code_dart_scan: ^0.7.1
   url_launcher: ^6.2.1
   flutter_zxing: ^1.5.2
   qr_code_tools: ^0.2.0
+  google_mlkit_text_recognition: ^0.15.0
 
   geolocator: ^14.0.2
 
