--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.0",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
     "redis": "^5.8.3",
     "resend": "^6.2.2",
