--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -70,7 +70,10 @@ dependencies:
 
   geolocator: ^14.0.2
 
-  
+  phone_text_field: ^0.0.7
+  flutter_intl_phone_field: ^0.0.7
+  intl_phone_field: ^3.0.1
+
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
